[gd_scene load_steps=5 format=3 uid="uid://cn5usoayl5w6v"]

[ext_resource type="Script" path="res://scripts/Objects/icon_interact.gd" id="1_ariva"]
[ext_resource type="Texture2D" uid="uid://bkohqxbkgtbyu" path="res://icon.svg" id="2_00e7q"]
[ext_resource type="FontFile" uid="uid://msmx8m8clr2p" path="res://resources/Font/Minecraft.ttf" id="3_1jule"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3p2c"]

[node name="IconInteract" type="Area2D"]
script = ExtResource("1_ariva")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_00e7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_h3p2c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = -64.0
offset_right = 52.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -2.0
offset_top = 13.0
offset_right = 109.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_1jule")
text = "[E] to Interact"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
